--- a/code/day03/html03.html
+++ b/code/day03/html03.html
@@ -2,28 +2,28 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>ÎÞ±êÌâÎÄµµ</title>
+<title>æ— æ ‡é¢˜æ–‡æ¡£</title>
 </head>
 
 <body>
-<!-- °´Å¥ÎÊÌâ -->
-<!-- ±íµ¥ÀïµÄ°´Å¥-->
+<!-- æŒ‰é’®é—®é¢˜ -->
+<!-- è¡¨å•é‡Œçš„æŒ‰é’®-->
 <form action="./html02.html">
- <!-- Ìá½»ºÍÖØÖÃ°´Å¥ -->
-  <input type="submit" value="Ìá½»" /><br />
-  <!-- Í¼Æ¬°´Å¥µÄÐÐÎªÓësubmitµÄÐÐÎªÒ»Ñù Ìá½»£¬µ«ÊÇÔÚÓÃ»§ÌåÑéÐÔ±È½ÏºÃ-->
+ <!-- æäº¤å’Œé‡ç½®æŒ‰é’® -->
+  <input type="submit" value="æäº¤" /><br />
+  <!-- å›¾ç‰‡æŒ‰é’®çš„è¡Œä¸ºä¸Žsubmitçš„è¡Œä¸ºä¸€æ · æäº¤ï¼Œä½†æ˜¯åœ¨ç”¨æˆ·ä½“éªŒæ€§æ¯”è¾ƒå¥½-->
   <input type="image" src="./image/button01.jpg"   /><br />
   
   
-  <input type="reset" value="Çå¿Õ" /><br />
+  <input type="reset" value="æ¸…ç©º" /><br />
   
-  <!-- ÆÕÍ¨°´Å¥Ö»¾ßÓÐ°´Å¥µÄÑù×Ó£¬Ã»ÓÐÈÎºÎÐÐÎª -->
-  <input type="button"  value="ÆÕÍ¨°´Å¥"/>
+  <!-- æ™®é€šæŒ‰é’®åªå…·æœ‰æŒ‰é’®çš„æ ·å­ï¼Œæ²¡æœ‰ä»»ä½•è¡Œä¸º -->
+  <input type="button"  value="æ™®é€šæŒ‰é’®"/>
   
 </form>
 <hr />
-<!-- ±íµ¥ÍâÃæµÄÆÕÍ¨°´Å¥-->
-<button>ÆÕÍ¨°´Å¥</button>
+<!-- è¡¨å•å¤–é¢çš„æ™®é€šæŒ‰é’®-->
+<button>æ™®é€šæŒ‰é’®</button>
 
 
 </body>
